--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an Article</h1>
+<h1>Edit existing article</h1>
 
 <% if @article.errors.any? %>
 
@@ -23,4 +23,5 @@
         <%= f.submit %>
     </p>
   <% end %>
+
 <%= link_to "Back to articles listing", articles_path %>
