--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,58 @@
+$navbar-default-bg: #FACDBE;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo{
+  float: left;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+
+}
+.center{
+  text-align: center;
+}
+
+.jumbotron{
+  background-image: asset-url('horses2.jpg');
+  background-size: cover;
+  height: 500px;
+}
+.jumbotron h1{
+  color: #fff;
+  text-align: center;
+  margin-bottom: 30px;
+  letter-spacing: -2px;
+  font-weight: bold;
+}
+.btn-xlarge{
+  font-size: 1.7em;
+  background-color:#FACDBE;
+}
+footer{
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #777;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+footer a:hover{
+  color: #222;
+}
+footer small{
+ float:left;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+footer ul{
+  float:right;
+  list-style:none;
+}
+footer ul li{
+  float:left;
+  margin-left:15px;
+}
