--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div>
   <footer class="footer">
-    <nav class="navbar navbar-default">
+    <nav>
       <small>
       Copyright &copy; <a href="#">Mohamed Elgazzar</a>
       </small>
