--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AlphaBlog</title>
+  <title>MyFarmBlog</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -11,9 +11,10 @@
   <%= render 'layouts/messages' %>
 <div class="container" >
   <%= yield %>
-</div>
-  
   <%= render 'layouts/footer' %>
+</div>
+
+
 
 </body>
 </html>
