add styling to show page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,6 +37,18 @@ $navbar-default-bg: green;
   font-size: 1.7em;
   background-color:#F57F58;
 }
+.article-actions{
+  border-top:1px solid #eaeaea;
+  padding-top: 5px;
+}
+.description{
+  margin-top:0;
+}
+
+
+
+
+
 footer{
   margin-top: 45px;
   padding-top: 5px;
