--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -37,6 +37,14 @@ $navbar-default-bg: green;
   font-size: 1.7em;
   background-color:#F57F58;
 }
+
+.article-meta-details{
+  border-top:1px solid #eaeaea;
+   margin-top:15px;
+}
+
+
+
 .article-actions{
   border-top:1px solid #eaeaea;
   padding-top: 5px;
