--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -61,7 +61,10 @@ $navbar-default-bg: green;
    padding-top: 15px;
    padding-bottom: 15px;
 }
-
+.listing{
+    list-style:none;
+    padding-left:0;
+}
 
 
 
