--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,10 @@
 <h1 align="center">List of all users:</h1>
+
+ 
+
+
 <div align="center">
+   <%= will_paginate %>
     <% @users.each do |user| %>
       <ul class="listing">
         <div class="row">
@@ -11,4 +16,9 @@
         </div>
       </ul>
     <% end %>
+<%= will_paginate %>
 </div>
+
+
+  
+
