--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,21 +16,23 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
 
-        <li class="white"><%= link_to "Articles", articles_path, id: "white" %></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="white">Actions<span class="caret"></span></a>
-          <ul class="dropdown-menu">
+        <li><%= link_to "Articles", articles_path, id: "white" %></li>
+        <li><%= link_to "Users", users_path, id: "white" %></li>
+        <% if logged_in? %>
+         <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="white">Actions<span class="caret"></span></a>
+                <ul class="dropdown-menu">
 
-            <li><%= link_to "New Article", new_article_path %></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
+                  <li><%= link_to "New Article", new_article_path %></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">One more separated link</a></li>
+                </ul>
+             </li>
+        <% end %>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -39,15 +41,22 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+        <% if logged_in? %>
+
+          <li><%= link_to 'logout', logout_path, method: :delete, id: 'white' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" id="white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Your Profile <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+              <li><%= link_to "View your profile", user_path(current_user) %></li>
+              <li><a href="#">Something else here</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+        <% else %>
+              <li><%= link_to 'Login', login_path, id: "white" %></li>
+              <li><%= link_to 'Sign up', signup_path, id: "white" %></li>
+              <% end %>
+
           </ul>
         </li>
       </ul>
