--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1 align="center">List of all users:</h1>
 
- 
+
 
 
 <div align="center">
@@ -12,6 +12,9 @@
             <li><%= link_to gravatar_for(user), user_path(user) %></li>
             <li class="article-title"><%= link_to user.username, user_path(user) %></li>
             <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
+            <% if logged_in? and current_user.admin? %>
+            <li><%= link_to "Delete this user", user_path(user), method: :delete, data: {confirm: "Are you sure you want to delete user and all their articles?"} %></li>
+            <% end %>
           </div>
         </div>
       </ul>
@@ -20,5 +23,5 @@
 </div>
 
 
-  
+
 
