--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -65,6 +65,17 @@ $navbar-default-bg: green;
     list-style:none;
     padding-left:0;
 }
+.badge {
+  background-color: #CEF6F5;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  font-weight: bold;
+
+}
+.input_checkbox input {
+  width: auto !important;
+  
+}
 
 
 
